--- a/style.css
+++ b/style.css
@@ -78,12 +78,58 @@ a {
 
 .placeholder {
   display: flex;
-
   height: 220px;
   width: 450.906px;
-
   justify-content: center;
   align-items: center;
   color: #e5e7eb;
   background-color: #536878;
+}
+
+.information-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  /*border: 2px solid green;*/
+  padding-top: 40px;
+  padding-bottom: 150px;
+}
+
+.information-maintext {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1f2937;
+  text-align: center;
+}
+
+.information-box-text-wrapper {
+  display: flex;
+  /*border: 2px solid red;*/
+  flex-direction: row;
+  gap: 40px;
+
+}
+
+.information-box {
+  border: 3px solid #3882f6;
+  height: 150px;
+  width: 150px;
+  border-radius: 8px;
+}
+
+.information-text {
+  text-align: center;
+}
+
+.one,
+.two,
+.three,
+.four {
+  /*border: 2px solid green;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
 }
