--- a/style.css
+++ b/style.css
@@ -133,3 +133,28 @@ a {
   align-items: center;
   gap: 8px;
 }
+
+.quote-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  padding: 130px 100px;
+  background-color: #e5e7eb;
+
+}
+
+.quote-maintext {
+  font-size: 36px;
+  font-style: italic;
+  color: #1f2937;
+}
+
+.quote-secondtext {
+
+  font-weight: bolder;
+  font-size: 18px;
+  margin-left: 550px;
+
+}
