--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'roboto';
+
+  display: flex;
+  flex-direction: column;
 }
 
 .header-section {
@@ -13,8 +16,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 0;
   padding: 0;
+  margin: 0;
   background-color: #1f2937;
 }
 
@@ -94,7 +97,7 @@ a {
   gap: 40px;
   /*border: 2px solid green;*/
   padding-top: 40px;
-  padding-bottom: 150px;
+  padding-bottom: 130px;
 }
 
 .information-maintext {
@@ -157,4 +160,66 @@ a {
   font-size: 18px;
   margin-left: 550px;
 
+}
+
+.call-to-action-section {
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.call-to-action-container {
+  display: flex;
+  justify-content: space-around;
+  border: 0;
+  border-radius: 8px;
+  height: max-content;
+  align-items: center;
+  width: 800px;
+  padding: 40px;
+  background-color: #3882f6;
+
+}
+
+.action-maintext {
+  color: #F9FAF8;
+  font-weight: bolder;
+  font-size: 18px;
+}
+
+.action-subtext {
+  color: #e5e7eb;
+}
+
+.signup-action-button {
+  background-color: #3882f6;
+  color: #F9FAF8;
+  border: 2px solid #F9FAF8;
+  border-radius: 4px;
+  padding: 4px 24px;
+  font-weight: bolder;
+
+}
+
+.left-action {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.footer-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  background-color: #1f2937;
+
+  padding: 40px;
+}
+
+.footer-text {
+  color: #e5e7eb;
+  font-size: 18px;
 }
